Fix summary overflow in fullscreen mode

--- a/src/scripts/components/summary/summary.scss
+++ b/src/scripts/components/summary/summary.scss
@@ -1,8 +1,8 @@
 .h5p-idea-board-exercise-summary {
   grid-area: 1 / 1 / 1 / 1;
-
-  transition: opacity 0.2s ease-in-out;
   opacity: 1;
+  overflow-y: auto;
+  transition: opacity 0.2s ease-in-out;
 
   &.display-none {
     display: none;
